Added functionality to create, select and execute
