# test_project/users/views.py
@@ -1,3 +1,4 @@
+from django.http import Http404, HttpResponse
 from django.views.generic import TemplateView
 from rest_framework import status
 from rest_framework.generics import ListCreateAPIView, RetrieveUpdateDestroyAPIView
@@ -6,9 +7,9 @@ from rest_framework.response import Response
 from rest_framework.views import APIView
 
 from .license import IsOwnerProfileOrReadOnly
-from .models import CustomUser
+from .models import CustomUser, Announcement
 from .renderers import UserJSONRenderer
-from .serializers import RegistrationSerializer
+from .serializers import RegistrationSerializer, AnnouncementSerializer
 
 
 # class RegistrationAPIView(APIView):
@@ -32,7 +33,7 @@ from .serializers import RegistrationSerializer
 class UserListCreateView(ListCreateAPIView):
     queryset = CustomUser.objects.all()
     serializer_class = RegistrationSerializer
-    permission_classes = [AllowAny,]
+    permission_classes = [AllowAny, ]
 
     def perform_create(self, serializer):
         user = self.request.user
@@ -42,4 +43,47 @@ class UserListCreateView(ListCreateAPIView):
 class UserDetailView(RetrieveUpdateDestroyAPIView):
     queryset = CustomUser.objects.all()
     serializer_class = RegistrationSerializer
-    permission_classes = [AllowAny,]
+    permission_classes = [AllowAny, ]
+
+
+class AnnouncementView(APIView):
+    permission_classes = [AllowAny, ]
+    serializer_class = RegistrationSerializer
+
+    def get(self, request):
+        announcement = Announcement.objects.all()
+        serializer = AnnouncementSerializer(announcement, many=True)
+        return Response({"announcement": serializer.data})
+
+    def post(self, request):
+        announcement = request.data
+        owner_id = request.data['owner']
+        owner = CustomUser.objects.get(pk=owner_id)
+        if owner.status == 'Customer':
+            serializer = AnnouncementSerializer(data=announcement)
+            if serializer.is_valid(raise_exception=True):
+                announcement_saved = serializer.save()
+        else:
+            return Response({'User': 'This user is not a Customer'}, status=404)
+        return Response({"success": f"Announcement '{announcement_saved.title}' created successfully"})
+
+
+class AnnouncementExecutorView(APIView):
+    permission_classes = [AllowAny, ]
+
+    def post(self, request):
+        announcement_id = request.data['announcement_id']
+        announcement = Announcement.objects.get(pk=announcement_id)
+        executor_id = request.data['executor_id']
+        executor = CustomUser.objects.get(pk=executor_id)
+        if announcement is None:
+            return Response({'Error': 'This announcement is not created'}, status=404)
+        if executor.status != "Executor":
+            return Response({'Error': 'This user is not executor'}, status=404)
+        announcement.status = 'Executing'
+        announcement.executor = executor
+        announcement.save()
+        return Response({"success": "The executor started to perform the announcement"})
+
+
+
